--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "autoprefixer": "^10.2.4",
+    "firebase": "^8.2.7",
+    "firebase-admin": "^9.5.0",
     "next": "10.0.7",
+    "postcss": "^8.2.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.1.5"
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.3"
   }
 }
