--- a/package.json
+++ b/package.json
@@ -8,17 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@date-io/date-fns": "1.3.13",
+    "@material-ui/data-grid": "^4.0.0-alpha.20",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.2.10",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "add": "^2.0.6",
     "autoprefixer": "^10.2.4",
+    "date-fns": "^2.17.0",
     "firebase": "^8.2.7",
     "firebase-admin": "^9.5.0",
+    "material-table": "^1.69.2",
+    "moment": "^2.29.1",
     "next": "10.0.7",
     "postcss": "^8.2.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-router-dom": "^5.2.0",
     "tailwindcss": "^2.0.3",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@material-ui/core": "^4.11.3",
